--- a/server/views/partials/header.hbs
+++ b/server/views/partials/header.hbs
@@ -1,11 +1,3 @@
-<div class="header">
-    <div class="logo">
-        <a class="logo__link" href="/">
-            <span>Logo text</span>
-        </a>
-    </div>
-
-    <div class="logo__sub">demo</div>
-
-    <div class="user__wrapper">{{> user}}</div>
+<div class="nav-main__layout">
+    {{> nav}}
 </div>
