--- a/server/views/partials/nav.hbs
+++ b/server/views/partials/nav.hbs
@@ -1,26 +1,17 @@
-<nav class="navbar navbar-dark bg-inverse">
-    <ul class="nav nav-stacked nav-main">
-
-        <li class="nav-item">
-            <a class="nav-link active" href="{{@baseUrl}}/nav_1">Nav 1</a>
+<nav class="navbar navbar-light bg-faded">
+    <ul class="nav navbar-nav">
+        <li class="nav-item {{isTrue path "===" "/" "active"}}">
+            <a class="nav-link" href="{{@baseUrl}}/">Home <span class="sr-only">(current)</span></a>
         </li>
-
-        <li class="nav-item">
-            <ul class="nav nav-stacked nav-nested">
-                <li class="nav-item">
-                    <a class="nav-link active" href="{{@baseUrl}}/nav_2">Nav 2</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{@baseUrl}}/nav_3">Nav 3</a>
-                </li>
-            </ul>
+        <li class="nav-item {{isTrue path "===" "/settings" "active"}}">
+            <a class="nav-link" href="{{@baseUrl}}/settings">settings</a>
         </li>
-
-        {{#if user.permissions.createRaffle}}
-            <li class="nav-item">
-                <a class="nav-link" href="{{@baseUrl}}/nav_3">Nav 3</a>
-            </li>
-        {{/if}}
+        <li class="nav-item {{isTrue path "===" "/services" "active"}}">
+            <a class="nav-link" href="{{@baseUrl}}/services">services</a>
+        </li>
     </ul>
+    <form class="form-inline pull-xs-right">
+        <input class="form-control" type="text" name="q" placeholder="Search" value="{{search}}">
+        <button class="btn btn-success-outline" type="submit">Search</button>
+    </form>
 </nav>
-
